詳細の関係者に生没年を足した
