# AozoraReaderClient/AozoraReaderPackages/Sources/AozoraAPI/Mapping/ContributorResponseMapping.swift
@@ -2,6 +2,12 @@ import AozoraAPIResponse
 
 internal extension ContributorResponse {
     init(response: Components.Schemas.Contributor) {
-        self.init(personId: response.personId, name: response.name, role: response.role)
+        self.init(
+            personId: response.personId,
+            name: response.name,
+            role: response.role,
+            birthDate: response.birthDate,
+            deathDate: response.deathDate
+        )
     }
 }
