# AozoraReaderClient/AozoraReaderPackages/Sources/AozoraAPI/Mapping/ContributorSummaryResponseMapping.swift
@@ -1,0 +1,7 @@
+import AozoraAPIResponse
+
+internal extension ContributorSummaryResponse {
+    init(response: Components.Schemas.ContributorSummary) {
+        self.init(personId: response.personId, name: response.name, role: response.role)
+    }
+}
